[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/PixelOperator8-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://imagem/pause.png" type="Texture" id=2]
[ext_resource path="res://UserInterface.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -189.0
margin_top = 38.0
margin_right = -19.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "Coletas: %s"
align = 2

[node name="PauseOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
rect_pivot_offset = Vector2( -645, -93 )
color = Color( 0, 0, 0, 0.243137 )

[node name="TextureRect" type="TextureRect" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -192.0
margin_right = 53.0
margin_bottom = -96.0
texture = ExtResource( 2 )

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.492
anchor_right = 0.5
anchor_bottom = 0.492
margin_left = -92.0
margin_top = -91.2
margin_right = 95.0
margin_bottom = 24.8

[node name="voltarButton" type="Button" parent="PauseOverlay/PauseMenu"]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
margin_right = 187.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "VOLTAR"
flat = true

[node name="MenuInicialButton" type="Button" parent="PauseOverlay/PauseMenu"]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
margin_top = 26.0
margin_right = 187.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "MENU INICIAL"
flat = true

[node name="quitButton" type="Button" parent="PauseOverlay/PauseMenu"]
modulate = Color( 0.301961, 0.105882, 0.419608, 1 )
margin_top = 52.0
margin_right = 187.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 2 )
text = "SAIR"
flat = true

[connection signal="button_up" from="PauseOverlay/PauseMenu/voltarButton" to="." method="_on_voltarButton_button_up"]
[connection signal="pressed" from="PauseOverlay/PauseMenu/voltarButton" to="." method="_on_MenuInicialButton_pressed"]
[connection signal="pressed" from="PauseOverlay/PauseMenu/MenuInicialButton" to="." method="_on_MenuInicialButton_pressed"]
[connection signal="pressed" from="PauseOverlay/PauseMenu/quitButton" to="." method="_on_quitButton_pressed"]
